--- a/AppSGMonitoreoEstudiantil/app/src/main/res/layout-land/activity_login.xml
+++ b/AppSGMonitoreoEstudiantil/app/src/main/res/layout-land/activity_login.xml
@@ -6,100 +6,133 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    android:gravity="center"
     android:background="@drawable/degradado"
-    android:orientation="horizontal"
+    android:gravity="center"
+    android:orientation="vertical"
+    android:padding="10dp"
     tools:context="pe.edu.sise.appsgmonitoreoestudiantil.LoginActivity">
-
-
-    <LinearLayout
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="center"
-        android:layout_gravity="center">
-
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            app:srcCompat="@drawable/ic_logo_monitoreo" />
-        <TextView
-            android:layout_width="239dp"
-            android:layout_height="50dp"
-            android:layout_marginBottom="15dp"
-            android:text="@string/name_sistema"
-            android:textColor="#8F2F0D"
-            android:textSize="18dp"
-            android:textAlignment="center"/>
-
-    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="6dp"
-        android:gravity="center">
+        android:layout_height="match_parent"
+        android:padding="10dp"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:backgroundTint="@color/color_trans"
+        android:background="@drawable/side_item_layout_componet_small"
+        >
 
-        <EditText
-            android:id="@+id/log_etx_usu"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_marginBottom="6dp"
-            android:background="@color/color_trans"
-            android:drawableStart="@drawable/ic_icon_user"
-            android:hint=" Ingrese usuario"
-            android:paddingLeft="10dp"
-            android:textColor="#EA3535"
-            android:textSize="16dp"/>
-
-        <EditText
-            android:id="@+id/log_etx_pass"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:background="@color/color_trans"
-            android:drawableStart="@drawable/ic_icon_password"
-            android:hint=" Ingrese password"
-            android:paddingLeft="10dp"
-            android:textColor="#EA3535"
-            android:textSize="16dp" />
-
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="3dp"
-            android:buttonTint="#FF7408"
-            android:text="Recordar usuario"
-            android:textColor="#8F2F0D"
-            android:id="@+id/log_chb_recUser" />
-
-        <Button
-            android:id="@+id/log_btn_entrar"
-            android:layout_width="match_parent"
-            android:layout_height="34dp"
-            android:layout_marginTop="10dp"
-            android:background="#DE7653"
-            android:text="Entrar"
-            android:textColor="#fff" />
-
-
-        <Button
-            android:id="@+id/log_btn_reg"
-            android:layout_width="match_parent"
-            android:layout_height="34dp"
-            android:layout_marginTop="5dp"
-            android:background="#E0D8D6"
-            android:text="Regitrarse" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+        <LinearLayout
+            android:layout_width="200dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
             android:gravity="center"
-            android:text="Olvidaste tu contraseña?"
-            android:textSize="12dp"
-            android:id="@+id/log_txv_recupPass" />
+            >
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:layout_gravity="center"
+                app:srcCompat="@drawable/ic_logo_monitoreo"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_marginBottom="15dp"
+                android:height="20dp"
+                android:gravity="center"
+                android:text="@string/name_sistema"
+                android:textAlignment="center"
+                android:textColor="#900C3F"
+                android:textSize="13dp"/>
+
+        </LinearLayout>
+
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="5dp"
+            android:gravity="center">
+
+            <EditText
+                android:id="@+id/log_etx_usu"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/side_item_layout_componet_small"
+                android:drawableLeft="@drawable/ic_icon_user"
+                android:backgroundTint="#ffffff"
+                android:hint="@string/hint_user"
+                android:imeOptions="actionNext"
+                android:inputType="text"
+                android:paddingLeft="10dp"
+                android:textColor="#EA3535"
+                android:textSize="18dp"
+                android:textAlignment="center"/>
+
+            <EditText
+                android:id="@+id/log_etx_pass"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:background="@drawable/side_item_layout_componet_small"
+                android:backgroundTint="#ffffff"
+                android:drawableLeft="@drawable/ic_icon_password"
+                android:hint="@string/hint_pass"
+                android:paddingLeft="10dp"
+                android:textColor="#EA3535"
+                android:textSize="18dp"
+                android:imeOptions="actionDone"
+                android:inputType="textPassword"
+                android:textAlignment="center"/>
+
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Recordar usuario"
+                android:layout_marginTop="5dp"
+                android:textColor="#8F2F0D"
+                android:buttonTint="#FF7408"
+                android:id="@+id/log_chb_recUser" />
+
+            <Button
+                android:id="@+id/log_btn_entrar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="1dp"
+                android:text="Entrar"
+                android:background="@drawable/side_item_layout_componet_small"
+                android:backgroundTint="#DE7653"
+                android:textColor="#fff"/>
+
+
+            <Button
+                android:id="@+id/log_btn_reg"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:text="Regitrarse"
+                android:background="@drawable/side_item_layout_componet_small"
+                android:backgroundTint="#3d9cc1"
+                android:textColor="#fff"
+                />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:textSize="15dp"
+                android:text="Olvidaste tu contraseña?"
+                android:id="@+id/log_txv_recupPass" />
+
+
+        </LinearLayout>
+
+
 
     </LinearLayout>
 
