--- a/AppSGMonitoreoEstudiantil/app/src/main/res/layout/alumnoact_card.xml
+++ b/AppSGMonitoreoEstudiantil/app/src/main/res/layout/alumnoact_card.xml
@@ -3,9 +3,10 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="190dp"
-    card_view:cardBackgroundColor="#cab5a8"
-    card_view:cardCornerRadius="14dp"
-    card_view:cardElevation="12dp">
+    card_view:cardCornerRadius="7dp"
+    android:layout_marginTop="8dp"
+    android:layout_margin="9dp"
+    android:padding="5dp">
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -14,7 +15,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:background="#e6e6e6">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -33,7 +35,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="3dp"
-                    android:background="#fff" />
+                    android:background="#18768e" />
 
             </LinearLayout>
 
@@ -41,42 +43,44 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="6dp"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:background="#e7e7e7"
+                >
 
                 <TextView
                     android:id="@+id/alum_actv_curso"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Curso :"
-                    android:textAppearance="?android:attr/textAppearanceLarge" />
+                    android:textAppearance="?android:attr/textAppearanceMedium"/>
 
                 <TextView
                     android:id="@+id/alum_actv_prof"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Prof :"
-                    android:textAppearance="?android:attr/textAppearanceLarge" />
+                    android:textAppearance="?android:attr/textAppearanceMedium" />
 
                 <TextView
                     android:id="@+id/alum_actv_fecha"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Fecha :"
-                    android:textAppearance="?android:attr/textAppearanceLarge" />
+                    android:textAppearance="?android:attr/textAppearanceMedium" />
 
                 <TextView
                     android:id="@+id/alum_actv_hini"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Hora inicio :"
-                    android:textAppearance="?android:attr/textAppearanceLarge" />
+                    android:textAppearance="?android:attr/textAppearanceMedium"/>
 
                 <TextView
                     android:id="@+id/alum_actv_hfin"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Hora fin :"
-                    android:textAppearance="?android:attr/textAppearanceLarge" />
+                    android:textAppearance="?android:attr/textAppearanceMedium"/>
 
 
             </LinearLayout>
