--- a/AppSGMonitoreoEstudiantil/app/src/main/res/layout/fragment_alumno_datosgenerales.xml
+++ b/AppSGMonitoreoEstudiantil/app/src/main/res/layout/fragment_alumno_datosgenerales.xml
@@ -5,7 +5,7 @@
     android:background="#d9d9d9"
     android:gravity="center"
     android:orientation="vertical"
-    android:padding="20dp"
+    android:padding="9dp"
     >
 
     <LinearLayout
@@ -26,7 +26,7 @@
                 android:layout_height="wrap_content"
                 android:text="Jhonatan Aruhanca Vilca"
                 android:textSize="20dp"
-                android:textStyle="bold" />
+                android:textAppearance="?android:attr/textAppearanceLarge"/>
 
         </LinearLayout>
 
